Exercicio trocando valor de variaveis

--- a/home.html
+++ b/home.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <h1>Dev Aprender</h1>
+    <h1>Curso Javascript</h1>
+    <h2>Trocando valores de variaveis</h2>
 </body>
 
 </html>
