--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Javascript</title>
-    <script src="./aula.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./trocandoValores.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
 </head>
 
 <body>
