--- a/home.html
+++ b/home.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Javascript</title>
-    <script src="./RetonaMaiorValor.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./fizzBuzz.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
 </head>
 
 <body>
     <h1>Curso Javascript</h1>
-    <h2>Trocando valores de variaveis</h2>
 </body>
 
 </html>
