Função medidor de velocidade

--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Javascript</title>
     <script src="./fizzBuzz.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./medidorVelocidade.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
 </head>
 
 <body>
