--- a/home.html
+++ b/home.html
@@ -7,6 +7,8 @@
     <title>Curso Javascript</title>
     <script src="./fizzBuzz.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
     <script src="./medidorVelocidade.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./ParImpar.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
+</head>
 </head>
 
 <body>
