Função onde percorre um objeto e exibide somente tipo string

--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
     <script src="./fizzBuzz.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
     <script src="./medidorVelocidade.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
     <script src="./ParImpar.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./exibirPropriedadeString.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
 </head>
 </head>
 
