--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
     <script src="./medidorVelocidade.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
     <script src="./ParImpar.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
     <script src="./exibirPropriedadeString.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./retornaMultiplos.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
 </head>
 </head>
 
