--- a/home.html
+++ b/home.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Javascript</title>
     <script src="./fizzBuzz.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
-    <script src="./medidorVelocidade.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
-    <script src="./ParImpar.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
-    <script src="./exibirPropriedadeString.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
-    <script src="./retornaMultiplos.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./medidorVelocidade.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./ParImpar.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./exibirPropriedadeString.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./retornaMultiplos.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./mediaEscolar.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
 </head>
 </head>
 
