--- a/home.html
+++ b/home.html
@@ -11,6 +11,8 @@
     <script src="./exibirPropriedadeString.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
     <script src="./retornaMultiplos.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
     <script src="./mediaEscolar.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./funcaoQuantidade.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+</head>
 </head>
 </head>
 
