--- a/home.html
+++ b/home.html
@@ -15,6 +15,8 @@
     <script src="./exibeNumeroPrimo.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
     <script src="./constructorFunction.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
     <script src="./clonandoObjetos.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./templateLiteral.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+</head>
 </head>
 </head>
 </head>
