Montador de endereço

--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
     <script src="./constructorFunction.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
     <script src="./clonandoObjetos.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
     <script src="./templateLiteral.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./montadorEndereco.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
 </head>
 </head>
 </head>
