Comparando se os objetos sao iguais

--- a/home.html
+++ b/home.html
@@ -17,6 +17,7 @@
     <script src="./clonandoObjetos.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
     <script src="./templateLiteral.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
     <script src="./montadorEndereco.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./igualdadeObjeto.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
 </head>
 </head>
 </head>
