Criando um objeto com array

--- a/home.html
+++ b/home.html
@@ -18,6 +18,7 @@
     <script src="./templateLiteral.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
     <script src="./montadorEndereco.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
     <script src="./igualdadeObjeto.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./montadorBlog.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
 </head>
 </head>
 </head>
