Criaçao de arrays sendo usado de tres formas diferentes

--- a/home.html
+++ b/home.html
@@ -19,6 +19,7 @@
     <script src="./montadorEndereco.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
     <script src="./igualdadeObjeto.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
     <script src="./montadorBlog.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./faixaPreco.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
 </head>
 </head>
 </head>
