--- a/home.html
+++ b/home.html
@@ -20,6 +20,8 @@
     <script src="./igualdadeObjeto.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
     <script src="./montadorBlog.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
     <script src="./faixaPreco.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./foreach.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+</head>
 </head>
 </head>
 </head>
