--- a/home.html
+++ b/home.html
@@ -21,6 +21,7 @@
     <script src="./montadorBlog.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
     <script src="./faixaPreco.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
     <script src="./foreach.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./array.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
 </head>
 </head>
 </head>
