Criacao de HTML e codigo JS para Segurança virtual

--- a/home.html
+++ b/home.html
@@ -5,24 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Javascript</title>
-    <script src="./fizzBuzz.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
-    <script src="./medidorVelocidade.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
-    <script src="./ParImpar.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
-    <script src="./exibirPropriedadeString.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
-    <script src="./retornaMultiplos.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
-    <script src="./mediaEscolar.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
-    <script src="./funcaoQuantidade.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
-    <script src="./exibeNumeroPrimo.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
-    <script src="./constructorFunction.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
-    <script src="./clonandoObjetos.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
-    <script src="./templateLiteral.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
-    <script src="./montadorEndereco.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
-    <script src="./igualdadeObjeto.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
-    <script src="./montadorBlog.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
-    <script src="./faixaPreco.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
-    <script src="./foreach.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
-    <script src="./array.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
-    <script src="./idade.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./segurancaVirtual.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
 </head>
 </head>
 </head>
@@ -31,7 +14,17 @@
 </head>
 
 <body>
-    <h1>Curso Javascript</h1>
+    <h1>Festa VIP</h1>
+
+    <h2>Bem Vindo a festa senhor(a):</h2>
+    <input value="" type="text" id="nome" name="nome"><br><br>
+
+    <h2>Quem te convidou para essa festa?</h2>
+    <input type="text" id="nomeConvidado" name="nomeConvidado">
+    <button onclick="segurancaVirtual()">Verificar se posso entrar</button>
+
+    <h2>Você está permitido a entrar?</h2>
+    <label id='PermissaoEntrada'>Pesquisando ...</label>
 </body>
 
 </html>
