Adição de maxlength aos inputs

--- a/home.html
+++ b/home.html
@@ -17,10 +17,10 @@
     <h1>Festa VIP</h1>
 
     <h2>Bem Vindo a festa senhor(a):</h2>
-    <input value="" type="text" id="nome" name="nome"><br><br>
+    <input maxlength="20" value="" type="text" id="nome" name="nome"><br><br>
 
     <h2>Quem te convidou para essa festa?</h2>
-    <input type="text" id="nomeConvidado" name="nomeConvidado">
+    <input maxlength="20" type="text" id="nomeConvidado" name="nomeConvidado">
     <button onclick="segurancaVirtual()">Verificar se posso entrar</button>
 
     <h2>Você está permitido a entrar?</h2>
