--- a/home.html
+++ b/home.html
@@ -5,6 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Javascript</title>
+    <script src="./fizzBuzz.js"></script> <!--pegar o arquivo aula.js e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./medidorVelocidade.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./ParImpar.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./exibirPropriedadeString.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./retornaMultiplos.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./mediaEscolar.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./funcaoQuantidade.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./exibeNumeroPrimo.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./constructorFunction.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./clonandoObjetos.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./templateLiteral.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./montadorEndereco.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./igualdadeObjeto.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./montadorBlog.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./faixaPreco.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./foreach.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./array.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
+    <script src="./idade.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
     <script src="./segurancaVirtual.js"></script> <!--pegar o arquivo e ler e exibe oq tiver de exibir na pagina -->
 </head>
 </head>
@@ -17,10 +35,10 @@
     <h1>Festa VIP</h1>
 
     <h2>Bem Vindo a festa senhor(a):</h2>
-    <input maxlength="20" value="" type="text" id="nome" name="nome"><br><br>
+    <input maxlength="20" value="" type="text" id="nome" name="nome" onkeypress="return apenasLetras(event)"><br><br>
 
     <h2>Quem te convidou para essa festa?</h2>
-    <input maxlength="20" type="text" id="nomeConvidado" name="nomeConvidado">
+    <input maxlength="20" type="text" id="nomeConvidado" name="nomeConvidado" onkeypress="return apenasLetras(event)">
     <button onclick="segurancaVirtual()">Verificar se posso entrar</button>
 
     <h2>Você está permitido a entrar?</h2>
